# dio

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  dev_server.sh  dio  dio_setup  index.html  index.js  package-lock.json  package.json  webpack.config.js
_converted_js/: dashboard.js  index.js
doc/: desired_features.md
esw-src/: Cargo.toml  app.rs  lib.rs  main.rs
jsx/: folder_selection.js  index.js
old/: dev_server.sh  package-lock.json  package.json  webpack.config.js
old/_js/: folder_selection.js  index.js
old/jsx/: index.js
old/src/old/: dates.rs  group.rs  lib.rs
old/static/: folder_selection.css  index.html
site/: dashboard.css  dashboard.html  folder_selection.html  folder_selection.js  index.js  package-lock.json  package.json
site/app/: dashboard.html  dashboard.js  folder_selection.html  folder_selection.js
src/: _demo.rs  dashboard.css  dashboard.html  folder_selection.css  folder_selection.html  folder_selection.js  index.html  lib.rs  main.rs  style.css  test.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: aggregate.rs  commands.rs  data_loading.rs  dates.rs  filter.rs  group.rs  groups.rs  json_loading.rs  main.rs  plays.rs  sort.rs
src-tauri/src/old/: group.rs  group0.rs  group1.rs  group2.rs
src/old/: utils.rs
static/: folder_selection.html  index.html
