[package]
name = "dio"
version = "0.1.0"
authors = ["Jake Marchewitz <7871951+jjmarchewitz@users.noreply.github.com>"]
description = "Your ultimate Spotify companion."
repository = "https://github.com/dio-music/dio"
license = "GPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
