[package]
name = "dio"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
gloo = "0.8.0"
yew = { version = "0.20", features = ["csr"] }
js-sys = "0.3.61"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]
