[package]
name = "extended_spotify_wrapped"
description = "Analyzer for the extended streaming data on your Spotify account. Data must be requested manually :("
version = "0.0.1"
authors = ["Jake Marchewitz"]
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
color-eyre = "0.6.2"
chrono = "0.4.21"
egui = "0.19.0"
eyre = "0.6.8"
eframe = { version = "0.19.0", features = ["persistence"] }
rfd = "0.10"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0.83"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm


[package.metadata.bundle]
name = "Extended Spotify Wrapped"
identifier = "com.jjmarchewitz.spoopity"
# icon = TODO:
